--- a/css/index.css
+++ b/css/index.css
@@ -401,6 +401,12 @@ footer p{
     }
 }
 
+@media only screen and (min-width: 500px){
+    .line_break{
+        display: none;
+    }
+}
+
 @media only screen and (max-width: 800px){
     .fleximages{
         justify-content: center;
